[metadata]
description-file = README.md

[coverage:run]
branch = True
source = fdp

[tool:pytest]
testpaths = tests
addopts = --cov fdp --cov-report xml --cov-report term --cov-report html

# Define `python setup.py build_sphinx`
[build_sphinx]
source-dir = docs
build-dir = docs/_build
all_files = 1
builder = html
